notebooks/4_eks/eks_artifacts/deployment-locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: 466407698387.dkr.ecr.ap-south-1.amazonaws.com/locust-load-testing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8089
        resources:
          requests:
            memory: "256M"
            cpu: "0.5"
          limits:
            memory: "512M"
            cpu: "1"
      restartPolicy: Always
