notebooks/4_eks/eks_artifacts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lorax-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lorax
  template:
    metadata:
      labels:
        app: lorax
    spec:
      containers:
      - name: lorax
        image: ghcr.io/predibase/lorax:07addea
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 600
          periodSeconds: 1
        volumeMounts:
        - name: data-volume
          mountPath: /data
        resources:
          requests:
            memory: "2G"
            cpu: "2"
            nvidia.com/gpu: "1"
          limits:
            memory: "4G"
            cpu: "3"
            nvidia.com/gpu: "1"
      volumes:
      - name: data-volume
        hostPath:
          path: /path/to/your/data
      restartPolicy: Always
