notebooks/4_eks/eks_artifacts/service-locust.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-service
spec:
  selector:
    app: locust
  ports:
  - protocol: TCP
    port: 8089
    targetPort: 8089
  type: ClusterIP
