notebooks/4_eks/eks_artifacts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lorax-service
spec:
  selector:
    app: lorax
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
